# PencilAnnealing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Algebra.hpp  AlgebraCommon.hpp  Algorithm.hpp  Annealer.hpp  Arc.hpp  Arithmetic.hpp  BBox.hpp  Bezier.hpp  CLI.hpp  Color.hpp  Concepts.hpp  Convolution.hpp  EmbeddedTestImage.cpp  EmbeddedTestImage.hpp  Error.hpp  File.hpp  Image.hpp  Line.hpp  Logging.hpp  Main.cpp  Matrix.hpp  Memory.hpp  PresentSurface.hpp  QuadTree.hpp  Random.hpp  Rendering.hpp  SDF.hpp  Serialization.hpp  String.hpp  ThreadPool.hpp  Time.hpp  Types.hpp  Utilities.hpp  Vector.hpp  VideoEncoder.hpp  Webp.hpp
test/: TestBezier.cpp  TestSerialization.cpp  TestUtilities.cpp
